feat: mackup page for test app

--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,56 @@
+:root {
+  --background: #E5E5E5;
+  --mainWhite: #f3f3f3;
+  --mainDark: #232528;
+  --mainYellow: #ffa400;
+  --mainGrey: #696969;
+}
+body {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+}
 .App {
   text-align: center;
 }
+    .rating {
+        display: flex;
+        padding: 0;
+        margin: 0;
+    }
+    .rating li {
+        list-style-type: none;   
+    }
+    .rating-item {
+        border: none;
+        cursor: pointer;
+        font-size: 20px;
+        color: var(--mainYellow);
+    }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
+    /* initial make all full */
+    .rating-item::before {
+      content: "\2605";
+    }
+
+    /* make untill the clicked star (the rest) empty */
+    .rating-item.active ~ .rating-item::before {
+      content: "\2606";
+    }
+
+    .rating:hover .rating-item::before {
+      content: "\2605";
+    }
+    
+    .rating-item:hover ~ .rating-item::before {
+      content: "\2606";
+    }
 
 @media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
 
 @keyframes App-logo-spin {
   from {
